little fix for universality

--- a/invoker/Makefile
+++ b/invoker/Makefile
@@ -3,8 +3,8 @@ PROGRAM = invoker.dge
 #PLATFORM = BITTBOY
 #PLATFORM = PC
 #PLATFORM = RS97
-PLATFORM = RG-350
-#PLATFORM = NEW
+#PLATFORM = RG-350
+PLATFORM = NEW
 
 # Compiler
 
