--- a/invoker/Makefile
+++ b/invoker/Makefile
@@ -1,9 +1,9 @@
 # Software Name
 PROGRAM = invoker.dge
-PLATFORM = BITTBOY
+#PLATFORM = BITTBOY
 #PLATFORM = PC
 #PLATFORM = RS97
-#PLATFORM = RG-350
+PLATFORM = RG-350
 #PLATFORM = RG-300
 
 # Compiler
